--- a/philippdolder.Development.Facts/philippdolder.Development.Facts.nuspec
+++ b/philippdolder.Development.Facts/philippdolder.Development.Facts.nuspec
@@ -7,14 +7,12 @@
     <owners>Philipp Dolder</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Use for build infrastructure.</description>
-    <copyright>Copyright 2014</copyright>
+    <copyright>Copyright 2014-2016</copyright>
     <developmentDependency>true</developmentDependency>
     <dependencies>
-      <dependency id="philippdolder.Development" />
-      <dependency id="xUnit.Extensions" />
-      <dependency id="xUnit.MSBuild" />
-      <dependency id="FakeItEasy" />
-      <dependency id="FluentAssertions" />
-	</dependencies>	
+        <dependency id="philippdolder.Development" />
+        <dependency id="philippdolder.Development.Analyzers" />
+        <dependency id="philippdolder.Development.xUnit" />
+    </dependencies>	
   </metadata>
 </package>
