--- a/philippdolder.Development.Specs/philippdolder.Development.Specs.nuspec
+++ b/philippdolder.Development.Specs/philippdolder.Development.Specs.nuspec
@@ -7,14 +7,12 @@
     <owners>Philipp Dolder</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Use for build infrastructure.</description>
-    <copyright>Copyright 2014</copyright>
+    <copyright>Copyright 2014-2016</copyright>
     <developmentDependency>true</developmentDependency>
     <dependencies>
       <dependency id="philippdolder.Development" />
-      <dependency id="FluentAssertions" />
-      <dependency id="FakeItEasy" />
-      <dependency id="Xbehave" />
-      <dependency id="xUnit.MSBuild" />
-	</dependencies>	
+      <dependency id="philippdolder.Development.Analyzers" />
+      <dependency id="philippdolder.Development.xBehave" />
+    </dependencies>	
   </metadata>
 </package>
