--- a/philippdolder.Development.xBehave/philippdolder.Development.xBehave.nuspec
+++ b/philippdolder.Development.xBehave/philippdolder.Development.xBehave.nuspec
@@ -1,18 +1,19 @@
 <?xml version="1.0"?>
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-    <id>philippdolder.Development.ProductionCode</id>
+    <id>philippdolder.Development.xBehave</id>
     <version>0.0.0</version>
     <authors>Philipp Dolder</authors>
     <owners>Philipp Dolder</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Used for build infrastructure.</description>
+    <description>Use for build infrastructure.</description>
     <copyright>Copyright 2014-2016</copyright>
     <developmentDependency>true</developmentDependency>
     <dependencies>
-      <dependency id="philippdolder.Development" />
-      <dependency id="philippdolder.Development.Analyzers" />
-      <dependency id="Appccelerate.CheckNugetDependenciesTask" />
-    </dependencies>	
+        <dependency id="FluentAssertions" />
+        <dependency id="FakeItEasy" />
+        <dependency id="xBehave.core" />
+        <dependency id="xunit.runner.msbuild" />
+  </dependencies>	
   </metadata>
 </package>
