--- a/philippdolder.Development/philippdolder.Development.nuspec
+++ b/philippdolder.Development/philippdolder.Development.nuspec
@@ -7,10 +7,9 @@
     <owners>Philipp Dolder</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Used for build infrastructure.</description>
-    <copyright>Copyright 2014</copyright>
+    <copyright>Copyright 2014-2016</copyright>
     <developmentDependency>true</developmentDependency>
     <dependencies>
-      <dependency id="StyleCop.MSBuild" version="[4.7.48.2,5)" />
       <dependency id="Appccelerate.VersionTask" />
       <dependency id="Appccelerate.CheckHintPathTask" />
 	</dependencies>	
